PhishGuard V5/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: phishguard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: phishguard:latest
        ports:
          - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
