PhishGuard V5/k8s/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: phishguard
spec:
  containers:
  - name: redis
    image: redis:7-alpine
    ports:
      - containerPort: 6379
